--- a/app/src/main/res/layout/alert_dialog_box_add_info.xml
+++ b/app/src/main/res/layout/alert_dialog_box_add_info.xml
@@ -11,8 +11,7 @@
         android:layout_height="wrap_content"
         android:text="Add new information"
         android:id="@+id/addInfoTextView"
-        android:textSize="25dp"
-        />
+        android:textSize="25dp" />
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
@@ -23,16 +22,29 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="New Information"
-            android:id="@+id/addInfoEditText"/>
+            android:hint="Title"
+            android:id="@+id/addInfoTitle"/>
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="Description"
+            android:id="@+id/addInfoDescription"/>
 
     </android.support.design.widget.TextInputLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -45,10 +57,7 @@
             android:layout_weight="0"
             android:id="@+id/selectInfoImage"/>
 
-
     </LinearLayout>
-
-
 
     <Button
         android:layout_width="wrap_content"
