--- a/app/src/main/res/layout/list_item_information_bulletin_user.xml
+++ b/app/src/main/res/layout/list_item_information_bulletin_user.xml
@@ -9,6 +9,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="5dp">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -25,11 +26,26 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="No Information"
-                android:id="@+id/infoTextView"
+                android:text="Title"
+                android:id="@+id/infoTitleTextView"
                 android:gravity="left"
                 android:layout_marginHorizontal="5dp"
-                android:textSize="20dp"
+                android:textSize="20sp"
+                android:textColor="#000000"
+                android:textStyle="bold"
+                android:layout_gravity="center" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:padding="5dp"
+                android:layout_below="@+id/infoTitleTextView"
+                android:text="Description"
+                android:id="@+id/infoDescriptionTextView"
+                android:gravity="left"
+                android:layout_marginHorizontal="5dp"
+                android:textSize="18sp"
                 android:textColor="#000000"
                 android:layout_gravity="center" />
 
@@ -37,8 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/infoTextView"
-                android:id="@+id/infoImageView"
-                />
+                android:id="@+id/infoImageView" />
 
         </RelativeLayout>
 
