--- a/app/src/main/res/layout/list_of_info.xml
+++ b/app/src/main/res/layout/list_of_info.xml
@@ -1,41 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:padding="5dp">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Date at TIme"
                 android:textSize="12dp"
                 android:id="@+id/dateAndTimeInfo"/>
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="7dp"
                 android:padding="8dp">
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="No Information"
-                    android:id="@+id/infoTextView"
+                    android:padding="10dp"
+                    android:text="Title"
+                    android:id="@+id/infoTitleTextView"
                     android:gravity="left"
                     android:layout_marginHorizontal="5dp"
                     android:textSize="20dp"
                     android:textColor="#000000"
+                    android:textStyle="bold"
                     android:layout_gravity="center"
-                    android:layout_toLeftOf="@id/deleteInfo"
-                    />
+                    android:layout_toLeftOf="@id/deleteInfo" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:padding="10dp"
+                    android:text="Description"
+                    android:id="@+id/infoDescriptionTextView"
+                    android:layout_below="@+id/infoTitleTextView"
+                    android:gravity="left"
+                    android:layout_marginHorizontal="5dp"
+                    android:textSize="18sp"
+                    android:textColor="#000000"
+                    android:layout_gravity="center"
+                    android:layout_toLeftOf="@id/deleteInfo" />
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
