--- a/app/src/main/res/layout/activity_professional1st.xml
+++ b/app/src/main/res/layout/activity_professional1st.xml
@@ -17,9 +17,9 @@
         android:id="@+id/headingSubjects" />-->
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/scrollViewOfSubjects"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@id/headingSubjects">
 
         <GridLayout
@@ -38,13 +38,13 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/AnatomyCard"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="150dp"
+                android:layout_row="0"
+                android:layout_rowWeight="1"
                 android:layout_column="0"
                 android:layout_columnWeight="1"
                 android:layout_margin="2dp"
                 android:layout_marginTop="10dp"
-                android:layout_row="0"
-                android:layout_rowWeight="1"
                 android:clickable="true"
                 app:cardBackgroundColor="#4c97e7"
                 app:cardCornerRadius="8dp"
@@ -54,16 +54,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
-                    android:orientation="vertical"
-                    android:background="@drawable/anatomy">
+                    android:background="@drawable/anatomy"
+                    android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:textAlignment="center"
-                        android:textSize="18dp"
-                        android:textStyle="bold" />
+                    <!--<TextView-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_gravity="center"-->
+                        <!--android:textAlignment="center"-->
+                        <!--android:textSize="18dp"-->
+                        <!--android:textStyle="bold" />-->
 
                 </LinearLayout>
 
@@ -72,13 +72,13 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/PhysiologyCard"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="150dp"
+                android:layout_row="1"
+                android:layout_rowWeight="1"
                 android:layout_column="0"
                 android:layout_columnWeight="1"
                 android:layout_margin="2dp"
                 android:layout_marginTop="10dp"
-                android:layout_row="1"
-                android:layout_rowWeight="1"
                 android:clickable="true"
                 app:cardBackgroundColor="#4c97e7"
                 app:cardCornerRadius="8dp"
@@ -88,16 +88,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
-                    android:orientation="vertical"
-                    android:background="@drawable/physiology">
+                    android:background="@drawable/physiology"
+                    android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:textAlignment="center"
-                        android:textSize="18dp"
-                        android:textStyle="bold" />
+                    <!--<TextView-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_gravity="center"-->
+                        <!--android:textAlignment="center"-->
+                        <!--android:textSize="18dp"-->
+                        <!--android:textStyle="bold" />-->
 
                 </LinearLayout>
 
@@ -106,13 +106,13 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/BiochemistryCard"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="150dp"
+                android:layout_row="2"
+                android:layout_rowWeight="1"
                 android:layout_column="0"
                 android:layout_columnWeight="1"
                 android:layout_margin="2dp"
                 android:layout_marginTop="10dp"
-                android:layout_row="2"
-                android:layout_rowWeight="1"
                 android:clickable="true"
                 app:cardBackgroundColor="#4c97e7"
                 app:cardCornerRadius="8dp"
@@ -122,16 +122,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|center_vertical"
-                    android:orientation="vertical"
-                    android:background="@drawable/biochemistry">
+                    android:background="@drawable/biochemistry"
+                    android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:textAlignment="center"
-                        android:textSize="18dp"
-                        android:textStyle="bold" />
+                    <!--<TextView-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_gravity="center"-->
+                        <!--android:textAlignment="center"-->
+                        <!--android:textSize="18dp"-->
+                        <!--android:textStyle="bold" />-->
 
                 </LinearLayout>
 
@@ -146,14 +146,14 @@
         android:id="@+id/changeProfession"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="bottom|end"
-        android:layout_marginBottom="22dp"
         android:layout_marginRight="22dp"
+        android:layout_marginBottom="22dp"
+        android:visibility="gone"
         app:srcCompat="@drawable/ic_open_with_black"
-        tools:ignore="VectorDrawableCompat"
-        android:visibility="gone"/>
+        tools:ignore="VectorDrawableCompat" />
 
 
 </RelativeLayout>
