--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -43,7 +43,7 @@
 
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="120dp"
+                    android:layout_height="150dp"
                     android:layout_columnWeight="1"
                     android:layout_rowWeight="1"
                     android:layout_margin="2dp"
@@ -61,13 +61,14 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
                         android:layout_column="0"
-                        android:layout_row="0">
+                        android:layout_row="0"
+                        android:background="@drawable/mcqtab">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textStyle="bold"
-                            android:text="Practice MCQ"
+                            android:text=""
                             android:textColor="#993944"
                             android:textSize="30dp"
                             android:textAlignment="center" />
@@ -102,7 +103,7 @@
             <android.support.v7.widget.CardView
                 android:id="@+id/journalCard"
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="150dp"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_margin="2dp"
@@ -135,7 +136,7 @@
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="150dp"
                 android:layout_columnWeight="1"
                 android:layout_rowWeight="1"
                 android:layout_margin="2dp"
@@ -153,13 +154,14 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:layout_column="0"
-                    android:layout_row="0">
+                    android:layout_row="0"
+                    android:background="@drawable/paperpresentation">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textStyle="bold"
-                        android:text="Paper Presentation"
+                        android:text=""
                         android:textColor="#993944"
                         android:textSize="30dp"
                         android:textAlignment="center" />
@@ -170,7 +172,7 @@
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="150dp"
                 android:layout_columnWeight="1"
                 android:layout_rowWeight="1"
                 android:layout_margin="2dp"
@@ -188,13 +190,14 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:layout_column="0"
-                    android:layout_row="0">
+                    android:layout_row="0"
+                    android:background="@drawable/quizclub">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textStyle="bold"
-                        android:text="Quiz"
+                        android:text=""
                         android:textColor="#993944"
                         android:textSize="30dp"
                         android:textAlignment="center" />
@@ -205,7 +208,7 @@
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
+                android:layout_height="150dp"
                 android:layout_columnWeight="1"
                 android:layout_rowWeight="1"
                 android:layout_margin="2dp"
