--- a/app/src/main/res/layout/image_dialog.xml
+++ b/app/src/main/res/layout/image_dialog.xml
@@ -4,24 +4,15 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:padding="10dp">
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/medicalRelatedPicImage"/>
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/medicalRelatedPicImage"
-                android:id="@+id/OK"
-                android:text="OK"
-                android:textColor="#ffffff"
-                android:background="#4e0000"
-                android:layout_alignParentRight="true"
-                android:layout_margin="10dp"/>
         </RelativeLayout>
     </ScrollView>
 
