--- a/app/src/main/res/layout/alert_dialog_box_add_info.xml
+++ b/app/src/main/res/layout/alert_dialog_box_add_info.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:padding="8dp"
     android:id="@+id/linearLayoutOfDialogBoxAddInfo">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
@@ -68,4 +77,8 @@
         android:layout_gravity="center"
         android:text="Add information"/>
 
-</LinearLayout>
+    </LinearLayout>
+
+    </ScrollView>
+
+</RelativeLayout>
