--- a/app/src/main/res/layout/list_item_information_bulletin_user.xml
+++ b/app/src/main/res/layout/list_item_information_bulletin_user.xml
@@ -45,14 +45,14 @@
                 android:id="@+id/infoDescriptionTextView"
                 android:gravity="left"
                 android:layout_marginHorizontal="5dp"
-                android:textSize="18sp"
+                android:textSize="15sp"
                 android:textColor="#000000"
                 android:layout_gravity="center" />
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/infoTextView"
+                android:layout_below="@+id/infoDescriptionTextView"
                 android:id="@+id/infoImageView" />
 
         </RelativeLayout>
