--- a/app/src/main/res/layout/activity_new_list_of_ppt.xml
+++ b/app/src/main/res/layout/activity_new_list_of_ppt.xml
@@ -7,21 +7,21 @@
     tools:context=".NewListOfPPT"
     android:padding="20dp">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Heading"
-        android:id="@+id/headingOfListOfPPTs"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        android:textColor="#000000"
-        android:gravity="center"
-        />
+    <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Heading"-->
+        <!--android:id="@+id/headingOfListOfPPTs"-->
+        <!--android:textSize="25dp"-->
+        <!--android:textStyle="bold"-->
+        <!--android:textColor="#000000"-->
+        <!--android:gravity="center"-->
+        <!--/>-->
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/headingOfListOfPPTs"
-        android:layout_marginTop="15dp">
+        android:layout_margin="8dp">
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
