--- a/app/src/main/res/layout/activity_pdfviewer.xml
+++ b/app/src/main/res/layout/activity_pdfviewer.xml
@@ -7,6 +7,13 @@
     tools:context=".PDFViewerActivity"
     android:padding="16dp">
 
+    <ProgressBar
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="150dp"
+        android:id="@+id/progressBar2" />
+
     <com.github.barteksc.pdfviewer.PDFView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
