--- a/app/src/main/res/layout/list_of_medical_related_pictures.xml
+++ b/app/src/main/res/layout/list_of_medical_related_pictures.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
     <android.support.v7.widget.CardView
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:padding="2dp"
         android:layout_margin="5dp"
+        app:cardBackgroundColor="#1D000000"
         >
 
         <RelativeLayout
